# reconciliation-system

./: .gitignore
backend/: .env.example  Cargo.toml  docker-compose.yml
backend/crates/recon-api/: Cargo.toml
backend/crates/recon-api/src/: auth.rs  dto.rs  error.rs  lib.rs  main.rs  ratelimit.rs  routes.rs  routes_audit.rs  routes_auth.rs  routes_users.rs  scheduler.rs  state.rs
backend/crates/recon-api/tests/: api.rs  auth_flow.rs  ingest_api.rs
backend/crates/recon-audit/: Cargo.toml
backend/crates/recon-audit/src/: chain.rs  controls.rs  events.rs  lib.rs
backend/crates/recon-audit/tests/: properties.rs
backend/crates/recon-auth/: Cargo.toml
backend/crates/recon-auth/src/: error.rs  lib.rs  lockout.rs  password.rs  rbac.rs  refresh.rs  token.rs
backend/crates/recon-domain/: Cargo.toml
backend/crates/recon-domain/src/: ageing.rs  approval.rs  events.rs  lib.rs  types.rs
backend/crates/recon-ingest/: Cargo.toml
backend/crates/recon-ingest/src/: bai2.rs  camt053.rs  csv.rs  detect.rs  lib.rs  money.rs  mt940.rs  mt942.rs  mt94x_shared.rs  pdf.rs
backend/crates/recon-ingest/tests/: properties.rs
backend/crates/recon-ingest/tests/fixtures/: bai2-continuation.bai  bai2-single-account.bai  mt940-latin1.sta  mt940-multi-message.sta  mt940-single-message.sta  mt940-subfielded.sta  mt942-single-message.sta  mt942-subfielded.sta  pdf-acmebank.txt
backend/crates/recon-mail/: Cargo.toml
backend/crates/recon-mail/src/: lib.rs
backend/crates/recon-matching/: Cargo.toml
backend/crates/recon-matching/src/: config.rs  engine.rs  lib.rs  score.rs  suggest.rs
backend/crates/recon-matching/tests/: properties.rs
backend/crates/recon-store/: Cargo.toml
backend/crates/recon-store/src/: audit.rs  auth.rs  dashboard.rs  error.rs  lib.rs  read.rs  rows.rs  runs.rs  seed.rs  sources.rs  write.rs
backend/crates/recon-store/tests/: audit_concurrent_appender.rs  audit_schema.rs  auth.rs  counterparty_schema.rs  format_dialect_schema.rs  ingest.rs  isolation.rs  patch_source.rs  source_disabled.rs  write.rs
backend/migrations/: 0001_init.sql  0002_auth.sql  0003_ingest.sql  0004_compliance.sql  0005_format_dialect.sql  0006_transactions_counterparty.sql  0007_pdf_profile.sql  0008_source_disabled.sql
docs/: adding-a-pdf-bank-profile.md  reconciliation-platform-prompt.md
docs/compliance/: controls.md
docs/superpowers/plans/: 2026-05-23-recon-ui-slice.md  2026-05-24-recon-auth-rbac.md  2026-05-24-recon-backend-slice.md  2026-05-25-recon-ingestion.md  2026-05-26-recon-compliance-audit-chain.md  2026-05-27-recon-phase7-polish-bundle.md  2026-06-29-recon-pdf-ingestion.md  2026-07-01-recon-phase9-polish-bundle.md
docs/superpowers/specs/: 2026-05-23-recon-ui-slice-design.md  2026-05-24-recon-auth-rbac-design.md  2026-05-24-recon-backend-slice-design.md  2026-05-25-recon-ingestion-design.md  2026-05-26-recon-bank-formats-mt940-bai2-design.md  2026-05-26-recon-compliance-audit-chain-design.md  2026-05-27-recon-phase7-polish-bundle-design.md  2026-06-29-recon-pdf-ingestion-design.md  2026-07-01-recon-phase9-polish-bundle-design.md
web/: README.md  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts  vitest.setup.ts
web/app/: globals.css  layout.tsx
web/app/(app)/: layout.tsx
web/app/(app)/audit/: page.tsx
web/app/(app)/audit/_components/: anchor-now-button.tsx  audit-filter-bar.tsx  audit-page-skeleton.tsx  audit-table.tsx  event-detail-dialog.tsx  verify-chain-dialog.tsx
web/app/(app)/cases/[caseId]/: page.tsx
web/app/(app)/controls/: page.tsx
web/app/(app)/dashboard/: page.tsx
web/app/(app)/exceptions/: page.tsx
web/app/(app)/runs/: page.tsx
web/app/(app)/runs/[runId]/: page.tsx
web/app/(app)/sources/: page.tsx
web/app/(app)/users/: page.tsx
web/app/forgot/: page.tsx
web/app/login/: page.tsx
web/app/reset/: page.tsx
web/components/app/: app-sidebar.tsx  approval-bar.tsx  break-columns.tsx  case-timeline.tsx  data-table.test.tsx  data-table.tsx  edit-source-dialog.tsx  empty-state.tsx  filter-select.tsx  kpi-card.test.tsx  kpi-card.tsx  new-run-dialog.tsx  page-header.tsx  run-columns.tsx  status-pill.test.tsx  status-pill.tsx  tenant-switcher.tsx  theme-toggle.tsx  upload-dialog.tsx  user-menu.tsx
web/lib/api/: client.ts  fixtures.ts  http.test.ts  http.ts  mock.test.ts  mock.ts  provider.tsx
web/lib/auth/: api.ts  auth-provider.tsx  mock-auth-provider.tsx  token-store.ts
web/lib/case/: approval.test.ts  approval.ts
web/lib/domain/: date.ts  money.test.ts  money.ts  status.test.ts  status.ts  types.ts
web/lib/hooks/: use-audit.ts  use-breaks.ts  use-case.ts  use-dashboard.ts  use-persisted-state.ts  use-runs.ts  use-sources.ts  use-tenants.ts
web/lib/providers/: current-user-provider.tsx  query-provider.tsx  tenant-provider.tsx
web/tests/: app-sidebar.test.tsx  approval-bar.test.tsx  audit-page.test.tsx  auth.test.tsx  case-detail.test.tsx  controls-page.test.tsx  dashboard.test.tsx  edit-source-dialog.test.tsx  exceptions.test.tsx  reset.test.tsx  run-detail.test.tsx  runs-list.test.tsx  sources-archive.test.tsx  sources-page.test.tsx  tenant-switcher.test.tsx  test-utils.tsx  theme-toggle.test.tsx  upload-dialog.test.tsx  user-menu.test.tsx  users-admin.test.tsx
web/tests/e2e/: auth.spec.ts  compliance.spec.ts  helpers.ts  ingestion.spec.ts  operator-loop.spec.ts
web/tests/e2e/fixtures/: bank.csv  ledger.camt053.xml
