[workspace]
resolver = "2"
members = [
  "crates/recon-domain",
  "crates/recon-matching",
  "crates/recon-store",
  "crates/recon-api",
  "crates/recon-auth",
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "time", "uuid", "json", "migrate", "macros"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
proptest = "1"
argon2 = "0.5"
jsonwebtoken = "9"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
