[package]
name = "recon-api"
edition.workspace = true
version.workspace = true

[[bin]]
name = "recon-api"
path = "src/main.rs"

[lib]
name = "recon_api"
path = "src/lib.rs"

[dependencies]
recon-domain = { path = "../recon-domain" }
recon-store = { path = "../recon-store" }
recon-matching = { path = "../recon-matching" }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
sqlx = { workspace = true }
tower = { workspace = true }
http-body-util = "0.1"
