[package]
name = "recon-api"
edition.workspace = true
version.workspace = true

[[bin]]
name = "recon-api"
path = "src/main.rs"

[lib]
name = "recon_api"
path = "src/lib.rs"

[dependencies]
recon-domain = { path = "../recon-domain" }
recon-store = { path = "../recon-store" }
recon-matching = { path = "../recon-matching" }
recon-auth = { path = "../recon-auth" }
recon-mail = { path = "../recon-mail" }
axum = { workspace = true }
sqlx = { workspace = true }
axum-extra = { version = "0.9", features = ["cookie"] }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }

[dev-dependencies]
sqlx = { workspace = true }
tower = { workspace = true }
http-body-util = "0.1"
recon-auth = { path = "../recon-auth" }
recon-domain = { path = "../recon-domain" }
recon-mail = { path = "../recon-mail", features = ["test-util"] }
time = { workspace = true }
