[package]
name = "recon-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
recon-domain = { path = "../recon-domain" }
serde = { workspace = true }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
time = { workspace = true }
