[package]
name = "recon-store"
edition.workspace = true
version.workspace = true

[dependencies]
recon-domain = { path = "../recon-domain" }
recon-matching = { path = "../recon-matching" }
sqlx = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
sqlx = { workspace = true }
